===== COMPLETED =====

0.1.0 - First version (27/12/22)
 - Main table with film title, year, rating, date
 - 'Add rating' button that brings up dialog for details
 - Delete button
 - Saving/loading data locally as JSON file

0.1.1 - Layout/design edits (21/01/23)
 - Made table items clickable, brings up details
   - Moved delete button here
 - Changed table date format to be smaller
 - Added Inter font, using in appbar
 - Added Indigo logo in appbar

0.2.0 (Apples testing) - Rating class additions (26/01/23)
  - Added description dropdown
  - Added Rating 'uuid' and 'timestamp' fields

0.2.1 - Backward Compatibility (XX/XX/XX)
  - Added version code to json file
    - Applying compatibility measures from versions <= 0.2.0
  - Added local backups (per 7 days)

===== PLANNED =====

0.2.1 - backward compatibility
  - Add deletion 'are you sure?'
  - Change description to type
  - Add description entry box

0.2.2 - code organisation
  - Make the Dialog box a class, with a show() method and get() methods for retrieving the current values in the add method
  - Move Ratings table into UI, have main be only main stuff
  - Fix possible async issue
  - Do other TODOs

0.3.0 - saving/syncing data
 - Import/export
 - Gdrive

0.4.0 - imdb
  - Auto add description mentioning import from (etc.) imdb

0.5.0 - analytics

0.6.0 - settings

1.0.0 - full
 - all platforms (Apple development requires investment)

PLAN - (non-urgent) implement at some point
 - Reduce outside padding of table
 -? Make app icon circle
 - Make intro/splash screen
 -? Change font of rest of app
 -? Have something show when logo is clicked
 - Custom descriptions that save for future

BUGS - (non-urgent) fix at some point
 - Date picker selection requires reloading of dialog box
 - Keyboard showing makes dialog box background shrink