@@ -18,19 +18,25 @@
   - Added Rating 'uuid' and 'timestamp' fields
 
 0.2.1 - Backward Compatibility (XX/XX/XX)
+  - Changed description to type
   - Added version code to json file
     - Applying compatibility measures from versions <= 0.2.0
   - Added local backups (per 7 days)
+  - Added deletion double-check
 
 ===== PLANNED =====
 
 0.2.1 - backward compatibility
-  - Add deletion 'are you sure?'
-  - Change description to type
   - Add description entry box
 
 0.2.2 - code organisation
   - Make the Dialog box a class, with a show() method and get() methods for retrieving the current values in the add method
+    - Sections
+      - Header
+      - Body (column of widgets)
+      - Buttons (row of buttons)
+    - Make main column centered and minimum size to reduce dialog size
+    - Make body elements scrollable to remove clipping error
   - Move Ratings table into UI, have main be only main stuff
   - Fix possible async issue
   - Do other TODOs
